# full-stack-ai-marketing-platform

./: package-lock.json  package.json
asset-processing-service/: Dockerfile  pyproject.toml
nextjs/: .gitignore  package-lock.json  package.json
nextjs/app/: page.tsx
