[tool.poetry]
name = "asset-processing-service"
version = "0.1.0"
description = ""
authors = ["Taukheer <ktaukheer@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
asset-processing-service = "asset_processing_service.main:main"

[tool.poetry.dependencies]
python = "^3.12"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
